# sykehusbygg

./: .gitignore  Makefile  README.md  pyproject.toml  rom_output2.txt
.github/workflows/: ci.yml
resource/: Standardromkatalog v4.0-04.11.2025.xlsx
src/: simple_rag.py
src/extract/: excel_to_json.py  json_to_chunks.py
src/sykehusbygg/: excel_to_chunks.py  excel_to_json.py  json_to_chunks.py  target_chunk.txt
src/tutorial/: 01_text_to_tokens.py  01b_difference_token_models.py  02_vector_store.py  03_chunk_test.py  10_simple_rag.py  README.md
tests/: conftest.py  test_excel_to_json.py
to_delete/: 03_chunk.py  03b_chunk_tuning.py  excel_to_chunk_firstrad.py  exceø_to_chunk_all.py
