[project]
name = "sykehusbygg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "mjooln>=0.8.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "trafilatura>=2.0.0",
]
