[project]
name = "sykehusbygg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "trafilatura>=2.0.0",
]

[dependency-groups]
# Packages in dev will be installed with uv sync, but not included in package
dev = [
    "mypy>=1.18.2",
    "pytest>=7.2.0",
    "ruff>=0.14.3",  # Ruff includes the black formatter
]

# This sections makes the uv sync command build your package in editable mode -- which means imports works smoothly
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py311"
